# PyraML

./: .gitignore  pyproject.toml
.github/workflows/: test.yml
examples/: basic_training.py
src/pyraml/: __init__.py
src/pyraml/core/: autograd.py  gradient.py  graph.py  memory.py  ops.py  tensor.py
src/pyraml/data/: dataloader.py  dataset.py
src/pyraml/distributed/: trainer.py
src/pyraml/jit/: compiler.py
src/pyraml/models/: base.py
src/pyraml/nn/: activations.py  functional.py  loss.py  losses.py  module.py  sequential.py
src/pyraml/nn/layers/: __init__.py  base.py  conv.py  dropout.py  linear.py  normalization.py  pooling.py
src/pyraml/optim/: adam.py  gd.py  optimizer.py  sgd.py
src/pyraml/training/: callbacks.py  trainer.py
tests/: conftest.py
